# px4_ugv_exp

./: .gitignore  .gitmodules  README.md
colcon_ws/src/all_launch/: CMakeLists.txt  package.xml
colcon_ws/src/all_launch/config/: config_vicon.yaml
colcon_ws/src/all_launch/config/nvblox/: nvblox_base.yaml
colcon_ws/src/all_launch/config/px4/: mavlink-router.conf
colcon_ws/src/all_launch/config/sensors/: realsense.yaml  vicon.yaml
colcon_ws/src/all_launch/launch/: record.launch.py  rs_vslam_nvblox.launch.py
colcon_ws/src/all_launch/launch/perception/: nvblox.launch.py  vslam.launch.py
colcon_ws/src/all_launch/launch/px4/: px4.launch.py
colcon_ws/src/all_launch/launch/sensors/: realsense.launch.py  record_realsense.launch.py  vicon.launch.py
colcon_ws/src/all_launch/launch/visualization/: rviz.launch.py  visualization.launch.py
colcon_ws/src/all_launch/src/: reset_vslam_server.cpp
colcon_ws/src/dasc_ros/dasc_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/dasc_ros/dasc_msgs/msg/: DITrajectory.msg
colcon_ws/src/dasc_ros/dasc_ros_utils/: CMakeLists.txt  README.md  package.xml
colcon_ws/src/dasc_ros/dasc_ros_utils/include/dasc_ros_utils/: conversions.hpp  setpoint_publisher.hpp  tf2_geometry_msgs.hpp  timer.hpp
colcon_ws/src/dasc_ros/dasc_ros_utils/launch/: publish_combined_res.launch.py
colcon_ws/src/dasc_ros/dasc_ros_utils/scripts/: cesdf_slice_teleop.py  cesdf_slice_vis.py  debug_screen.py  debug_time.py  joystick_goal.py  joystick_publisher.py  joystick_traj.py  obs_map_processing.py  publish_lab_poly.py  publish_setpoint.py  publish_setpoint_ax_w.py  publish_setpoint_old.py  publish_u.py  rosbag_record.sh
colcon_ws/src/dasc_ros/dasc_ros_utils/src/: setpoint_publisher.cpp  state_estimate_publisher.cpp
colcon_ws/src/px4_msgs/: CMakeLists.txt
colcon_ws/src/px4_msgs/msg/: CommanderSetState.msg  CommanderStatus.msg  ParameterReq.msg  ParameterRes.msg  SimpleBatteryStatus.msg  TrajectorySetpoint.msg
colcon_ws/src/ros2-ping/: CMakeLists.txt  LICENSE  README.md  package.xml
colcon_ws/src/ros2-ping/src/: ping.cpp  pong.cpp
docker/: .isaac_ros_common-config  Dockerfile.dasc_isaac  workspace-entrypoint.sh
