<?xml version="1.0"?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>all_launch</name>
  <version>3.1.0</version>
  <description>Launches all the relevant packages</description>
  <maintainer email="devansh@umich.edu">Dev</maintainer>
  <license>Apache-2.0</license>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>vslam_interfaces</depend>

  <!-- Utils -->
  <exec_depend>isaac_ros_launch_utils</exec_depend>
  <exec_depend>nvblox_ros_python_utils</exec_depend>

  <!-- Nvblox -->
  <!--
	  <exec_depend>nvblox_ros</exec_depend>
  -->

  <!-- Visual SLAM -->
  <exec_depend>isaac_ros_visual_slam</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
